[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cen-stats"
authors = [
    {name = "Keith Oshima", email = "oshimak@pennmedicine.upenn.edu"},
]
description = "Centromere status checker."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dependencies = [
    "polars",
    "loguru",
    "editdistance"
]
version = "0.0.1"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cen-stats*"]
exclude = ["docs*", "test*"]

[tool.setuptools_scm]

[project.scripts]
cen_stats = "cen_stats.cli:main"
