[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "CenStats"
authors = [
    {name = "Keith Oshima", email = "oshimak@pennmedicine.upenn.edu"},
]
description = "Centromere status checker."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dependencies = [
    "polars",
    "loguru",
    "editdistance"
]
version = "0.0.1"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["censtats*"]
exclude = ["docs*", "test*"]

[tool.setuptools_scm]

[project.scripts]
censtats = "censtats.cli:main"
